--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "13-drum-machine",
+  "name": "drum-machine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-howler": "^5.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.1.4",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
